--- a/app/src/main/res/layout-large/activity_adash.xml
+++ b/app/src/main/res/layout-large/activity_adash.xml
@@ -225,7 +225,7 @@
                 </LinearLayout>
 
 
-                <com.google.android.gms.ads.AdView
+                <!--<com.google.android.gms.ads.AdView
                     xmlns:ads="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/adView"
                     android:layout_width="wrap_content"
@@ -237,7 +237,7 @@
                     ads:adSize="BANNER"
                     ads:adUnitId="@string/banner_home_footer">
 
-                </com.google.android.gms.ads.AdView>
+                </com.google.android.gms.ads.AdView>-->
 
             </LinearLayout>
 
