--- a/app/src/main/res/layout-large/activity_fdash.xml
+++ b/app/src/main/res/layout-large/activity_fdash.xml
@@ -229,7 +229,7 @@
 
                     </LinearLayout>
 
-                    <com.google.android.gms.ads.AdView
+                   <!-- <com.google.android.gms.ads.AdView
                         xmlns:ads="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/adView"
                         android:layout_width="wrap_content"
@@ -241,7 +241,7 @@
                         ads:adSize="BANNER"
                         ads:adUnitId="@string/banner_home_footer">
 
-                    </com.google.android.gms.ads.AdView>
+                    </com.google.android.gms.ads.AdView>-->
 
                 </LinearLayout>
 
