--- a/app/src/main/res/layout-large/activity_pdash.xml
+++ b/app/src/main/res/layout-large/activity_pdash.xml
@@ -228,7 +228,7 @@
 
                     </LinearLayout>
 
-                    <com.google.android.gms.ads.AdView
+                    <!--<com.google.android.gms.ads.AdView
                         xmlns:ads="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/adView"
                         android:layout_width="wrap_content"
@@ -240,7 +240,7 @@
                         ads:adSize="BANNER"
                         ads:adUnitId="@string/banner_home_footer">
 
-                    </com.google.android.gms.ads.AdView>
+                    </com.google.android.gms.ads.AdView>-->
 
                 </LinearLayout>
 
