--- a/app/src/main/res/layout/activity_adash.xml
+++ b/app/src/main/res/layout/activity_adash.xml
@@ -22,7 +22,7 @@
             <Spinner
                 android:id="@+id/sp_aenrollid"
                 android:layout_width="match_parent"
-                android:layout_weight="7.5"
+                android:layout_weight="7"
                 android:layout_height="wrap_content" />
 
             <TextView
@@ -31,7 +31,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|center_horizontal"
                 android:textColor="@color/green"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:hint="coursename"/>
@@ -52,12 +52,14 @@
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/chart3"
                     android:layout_gravity="center_vertical|center_horizontal"
-                    android:layout_width="200dp"
-                    android:layout_height="200dp" />
+                    android:layout_width="180dp"
+                    android:layout_height="180dp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginBottom="4dp"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -240,7 +242,7 @@
 
                 </LinearLayout>
 
-                <com.google.android.gms.ads.AdView
+                <!--<com.google.android.gms.ads.AdView
                     xmlns:ads="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/adView"
                     android:layout_width="wrap_content"
@@ -252,7 +254,7 @@
                     ads:adSize="BANNER"
                     ads:adUnitId="@string/banner_home_footer">
 
-                </com.google.android.gms.ads.AdView>
+                </com.google.android.gms.ads.AdView>-->
 
             </LinearLayout>
 
@@ -267,7 +269,7 @@
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/bchart3"
                     android:layout_width="match_parent"
-                    android:layout_height="190dp"
+                    android:layout_height="160dp"
                     android:layout_marginTop="5dp" />
 
                 <LinearLayout
