--- a/app/src/main/res/layout/activity_alert_report.xml
+++ b/app/src/main/res/layout/activity_alert_report.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -30,7 +30,7 @@
                 android:text="REPORT"
                 android:layout_gravity="center"
                 android:textStyle="bold"
-                android:textSize="25sp" />
+                android:textSize="16sp" />
 
             <View
                 android:layout_width="match_parent"
@@ -47,9 +47,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:text="QUESTION - ID"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
-                    android:textSize="20sp"
+                    android:textSize="12sp"
                     android:textColor="#f8a40500"
                     android:gravity="center_vertical"
                     android:layout_weight="1"/>
@@ -57,7 +55,7 @@
                     android:id="@+id/txt_question_id"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:textSize="20sp"
+                    android:textSize="12sp"
                     android:textColor="#f8a40500"
                     android:gravity="center_vertical"
                     android:layout_weight="1"/>
@@ -72,21 +70,17 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_marginRight="20dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="ISSUE TYPE "
                     android:textColor="#f8a40500"
-                    android:textSize="20sp" />
+                    android:textSize="12sp" />
 
                 <androidx.appcompat.widget.AppCompatSpinner
                     android:id="@+id/sp_report"
                     android:layout_width="wrap_content"
-                    android:textSize="20sp"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
                     android:layout_height="40dp"
+                    android:textSize="12sp"
                     android:textAlignment="center"
                     android:layout_weight="1">
 
@@ -102,9 +96,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     android:id="@+id/txt_reportMessage"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
                     android:hint="Enter Report Message"
+                    android:textSize="12sp"
                     android:textColor="#f8a40500">
 
                 </EditText>
@@ -121,8 +114,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="45dp"
                     android:text="REPORT"
-                    android:layout_marginRight="20dp"
-                    android:layout_marginLeft="20dp"
                     android:textColor="#ffffff"
                     android:background="#f8a40500"
                     android:id="@+id/btn_report"
@@ -144,4 +135,4 @@
         android:src="@drawable/ic_close" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
