--- a/app/src/main/res/layout/activity_assesmenttestitem.xml
+++ b/app/src/main/res/layout/activity_assesmenttestitem.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:hint="No.Ques:"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -42,7 +42,7 @@
                 android:textStyle="bold|italic"
                 android:textColor="@color/green"
                 android:layout_weight="1"
-                android:textSize="16sp"/>
+                android:textSize="14sp"/>
         </LinearLayout>
 
             <View
@@ -54,6 +54,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -68,6 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textColor="@color/green"
+                        android:textSize="12sp"
                         android:text="Min"/>
 
                     <TextView
@@ -76,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:hint=""
                         android:layout_weight="1"
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textColor="#000000"/>
 
                 </LinearLayout>
@@ -92,6 +95,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:textSize="12sp"
                         android:textColor="@color/green"
                         android:text="Avg"/>
 
@@ -101,7 +105,7 @@
                         android:layout_height="wrap_content"
                         android:hint=""
                         android:layout_weight="1"
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textColor="#000000"/>
 
                 </LinearLayout>
@@ -117,6 +121,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:textSize="12sp"
                         android:textColor="@color/green"
                         android:text="Max"/>
 
@@ -126,7 +131,7 @@
                         android:layout_height="wrap_content"
                         android:hint=""
                         android:layout_weight="1"
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textColor="#000000"/>
 
                 </LinearLayout>
@@ -140,8 +145,8 @@
 
                     <ImageView
                         android:id="@+id/iv_start"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/play"/>
 
@@ -149,6 +154,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:textSize="12sp"
                         android:text="Start" />
                 </LinearLayout>
 
@@ -161,8 +167,8 @@
 
                     <ImageView
                         android:id="@+id/iv_review"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:layout_gravity="center"
                         android:src="@drawable/review"/>
 
@@ -187,7 +193,7 @@
                         android:layout_gravity="center_vertical"
                         android:textColor="#000000"
                         android:layout_weight="1"
-                        android:textSize="12dp"/>
+                        android:textSize="10dp"/>
 
                     <ImageView
                         android:id="@+id/iv_atestdownload"
