--- a/app/src/main/res/layout/activity_enrollitem.xml
+++ b/app/src/main/res/layout/activity_enrollitem.xml
@@ -43,12 +43,12 @@
 
                     <TextView
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginRight="5dp"
+                        android:gravity="center_vertical"
                         android:text="EnrollId"
                         android:textColor="@color/green"
-                        android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp" />
 
                     <TextView
                         android:id="@+id/tv_enrollid"
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
                         android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                 </LinearLayout>
 
@@ -73,7 +73,7 @@
                         android:text="BatchId"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                     <TextView
                         android:id="@+id/tv_batchid"
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                 </LinearLayout>
 
@@ -98,7 +98,7 @@
                         android:text="OrgId"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                     <TextView
                         android:id="@+id/tv_orgnisationid"
@@ -106,7 +106,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                 </LinearLayout>
 
@@ -123,7 +123,7 @@
                         android:text="Days Left"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                     <TextView
                         android:id="@+id/tv_daysleft"
@@ -131,7 +131,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                 </LinearLayout>
 
@@ -152,7 +152,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+                    android:layout_marginTop="2dp"
                     android:layout_weight="2.4">
 
                     <TextView
@@ -162,7 +162,7 @@
                         android:layout_marginRight="5dp"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp"/>
+                        android:textSize="10sp"/>
 
                     <TextView
                         android:id="@+id/tv_coursename"
@@ -170,7 +170,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="#000000"
                         android:gravity="center_vertical"
-                        android:textSize="12sp"/>
+                        android:textSize="10sp"/>
 
                 </LinearLayout>
 
@@ -182,7 +182,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="2dp"
+                    android:layout_marginTop="2dp"
                     android:layout_weight="3.8">
 
                     <TextView
@@ -192,7 +192,7 @@
                         android:layout_marginRight="5dp"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp" />
+                        android:textSize="10sp" />
 
                     <TextView
                         android:id="@+id/tv_activateddate"
@@ -200,7 +200,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="12sp" />
+                        android:textSize="10sp" />
 
                 </LinearLayout>
 
@@ -217,7 +217,7 @@
                         android:text="End Date"
                         android:textColor="@color/green"
                         android:gravity="center_vertical"
-                        android:textSize="14sp" />
+                        android:textSize="10sp" />
 
                     <TextView
                         android:id="@+id/tv_enddate"
@@ -225,7 +225,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="12sp" />
+                        android:textSize="10sp" />
 
                 </LinearLayout>
             </LinearLayout>
@@ -239,20 +239,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:gravity="center"
             android:layout_weight="9.2">
-            <View
+            <!--<View
                 android:layout_width="2dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_marginBottom="15dp"
                 android:layout_marginTop="15dp"
-                android:background="@android:color/darker_gray" />
+                android:background="@android:color/darker_gray" />-->
             <ImageView
                 android:id="@+id/iv_start_test"
                 android:layout_width="30dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_margin="5dp"
-                android:layout_gravity="center"
                 android:src="@drawable/details1" />
         </LinearLayout>
         </LinearLayout>
