--- a/app/src/main/res/layout/activity_enrollreqitem.xml
+++ b/app/src/main/res/layout/activity_enrollreqitem.xml
@@ -36,17 +36,17 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="1.3"
                         android:gravity="center_vertical"
                         android:text="EnrollId"
                         android:textColor="@color/green"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_erenrollid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight=".7"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
                         android:textSize="12sp" />
@@ -62,17 +62,17 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="1.3"
                         android:gravity="center_vertical"
                         android:text="BatchId"
                         android:textColor="@color/green"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_erbatchid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight=".7"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
                         android:textSize="12sp" />
@@ -88,17 +88,17 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="1.3"
                         android:gravity="center_vertical"
                         android:text="OrgId"
                         android:textColor="@color/green"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_erorgnisationid"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight=".7"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
                         android:textSize="12sp" />
@@ -114,20 +114,20 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight="1.3"
                         android:gravity="center_vertical"
                         android:text="Amount"
                         android:textColor="@color/green"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_eramount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_weight=".7"
                         android:gravity="center_vertical"
                         android:textColor="#000000"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                 </LinearLayout>
 
@@ -163,7 +163,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                    android:layout_weight="2">
+                    android:layout_weight="3">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -172,7 +172,7 @@
                         android:gravity="center_vertical"
                         android:text="CourseName"
                         android:textColor="@color/green"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_ercoursename"
@@ -188,7 +188,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                    android:layout_weight="4">
+                    android:layout_weight="3.5">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -197,7 +197,7 @@
                         android:gravity="center_vertical"
                         android:text="Req. Date"
                         android:textColor="@color/green"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_erreqdate"
@@ -213,7 +213,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="2dp"
-                    android:layout_weight="4">
+                    android:layout_weight="3.5">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -222,7 +222,7 @@
                         android:gravity="center_vertical"
                         android:text="End Date"
                         android:textColor="@color/green"
-                        android:textSize="14sp" />
+                        android:textSize="12sp" />
 
                     <TextView
                         android:id="@+id/tv_erenddate"
