--- a/app/src/main/res/layout/activity_fdash.xml
+++ b/app/src/main/res/layout/activity_fdash.xml
@@ -46,19 +46,20 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
                     android:orientation="vertical"
                     android:layout_weight="1">
 
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/chart2"
                         android:layout_gravity="center_horizontal"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp" />
+                        android:layout_width="180dp"
+                        android:layout_height="180dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:layout_marginLeft="16dp"
                         android:orientation="horizontal">
 
                         <LinearLayout
@@ -241,7 +242,7 @@
 
                     </LinearLayout>
 
-                    <com.google.android.gms.ads.AdView
+                   <!-- <com.google.android.gms.ads.AdView
                         xmlns:ads="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/adView"
                         android:layout_width="wrap_content"
@@ -253,7 +254,7 @@
                         ads:adSize="BANNER"
                         ads:adUnitId="@string/banner_home_footer">
 
-                    </com.google.android.gms.ads.AdView>
+                    </com.google.android.gms.ads.AdView>-->
 
                 </LinearLayout>
 
@@ -269,7 +270,7 @@
                         android:id="@+id/bchart2"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="190dp"/>
+                        android:layout_height="160dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
