--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="10"
+        android:weightSum="2"
         tools:layout_editor_absoluteX="5dp"
         tools:layout_editor_absoluteY="5dp"
         tools:ignore="MissingConstraints">
@@ -19,27 +19,32 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:gravity="center_horizontal">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_gravity="center">
 
             <ImageView
-                android:layout_width="140dp"
-                android:layout_height="match_parent"
-                android:gravity="center_vertical|center_horizontal"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:src="@drawable/tmslogo" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="16dp"
+            android:layout_gravity="center"
+            android:gravity="center">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="280dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:elevation="5dp"
                 app:cardElevation="5dp"
+                app:cardCornerRadius="8dp"
                 app:cardUseCompatPadding="true">
 
                 <LinearLayout
@@ -52,8 +57,9 @@
                     <EditText
                         android:id="@+id/et_email"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="8dp"
+                        android:textSize="14sp"
                         android:background="@drawable/custom_edittext"
                         android:hint="Mobile Number"
                         android:inputType="number|phone" />
@@ -61,15 +67,16 @@
                     <!-- Password Label -->
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_height="40dp"
+                        android:layout_margin="8dp"
                         app:hintEnabled="false"
                         app:passwordToggleEnabled="true">
 
                         <EditText
                             android:id="@+id/et_password"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
+                            android:layout_height="40dp"
+                            android:textSize="14sp"
                             android:background="@drawable/custom_edittext"
                             android:hint="Password"
                             android:inputType="textPassword" />
@@ -79,8 +86,10 @@
                         android:id="@+id/cb_remember"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
+                        android:layout_marginLeft="4dp"
+                        android:layout_marginRight="4dp"
                         android:text="Remember"
+                        android:textSize="14sp"
                         android:textColor="#000000" />
 
                     <TextView
@@ -91,27 +100,28 @@
                         android:textColor="@android:color/black"
                         android:textStyle="bold|italic"
                         android:gravity="right"
-                        android:layout_marginRight="10dp"/>
+                        android:textSize="14sp"
+                        android:layout_marginRight="16dp"/>
 
                     <Button
                         android:id="@+id/btn_login"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="40dp"
                         android:layout_margin="12dp"
                         android:background="@drawable/custom_button"
-                        android:padding="12dp"
                         android:text="Login"
+                        android:textSize="14sp"
                         android:textColor="@drawable/custom_text" />
 
                     <TextView
                         android:id="@+id/tv_signup"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="12dp"
+                        android:layout_margin="10dp"
                         android:gravity="center"
                         android:text="@string/signup"
                         android:textColor="@android:color/holo_orange_dark"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textStyle="bold" />
 
                 </LinearLayout>
