--- a/app/src/main/res/layout/activity_pdash.xml
+++ b/app/src/main/res/layout/activity_pdash.xml
@@ -23,7 +23,7 @@
                 <Spinner
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7.5"
+                    android:layout_weight="7"
                     android:id="@+id/sp_penrollids"/>
 
                 <TextView
@@ -35,7 +35,7 @@
                     android:textColor="@color/green"
                     android:hint="courseid"
                     android:layout_margin="2dp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="3"/>
 
             </LinearLayout>
 
@@ -53,12 +53,14 @@
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/chart1"
                         android:layout_gravity="center_horizontal"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp" />
+                        android:layout_width="180dp"
+                        android:layout_height="180dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginBottom="4dp"
                         android:orientation="horizontal">
 
                         <LinearLayout
@@ -240,7 +242,7 @@
 
                     </LinearLayout>
 
-                    <com.google.android.gms.ads.AdView
+                   <!-- <com.google.android.gms.ads.AdView
                         xmlns:ads="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/adView"
                         android:layout_width="wrap_content"
@@ -252,7 +254,7 @@
                         ads:adSize="BANNER"
                         ads:adUnitId="@string/banner_home_footer">
 
-                    </com.google.android.gms.ads.AdView>
+                    </com.google.android.gms.ads.AdView>-->
 
                 </LinearLayout>
 
@@ -268,7 +270,7 @@
                         android:id="@+id/bchart1"
                         android:layout_marginTop="5dp"
                         android:layout_width="match_parent"
-                        android:layout_height="190dp"/>
+                        android:layout_height="160dp"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
