--- a/app/src/main/res/layout/activity_testitem.xml
+++ b/app/src/main/res/layout/activity_testitem.xml
@@ -7,14 +7,14 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="110dp"
+        android:layout_height="100dp"
         app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:id="@+id/layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:orientation="vertical"
             android:padding="2dp">
@@ -28,19 +28,19 @@
 
                 <ImageView
                     android:id="@+id/iv_history"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="center"
                     android:src="@drawable/ic_history_black_36dp" />
                 <TextView
                     android:id="@+id/tv_NoOfQues"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginLeft="4dp"
                     android:gravity="center"
                     android:hint="No.Ques:"
                     android:textColor="@color/green"
-                    android:textSize="14dp"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -51,21 +51,23 @@
                     android:gravity="center"
                     android:hint="testid"
                     android:textColor="@color/green"
-                    android:textSize="16sp"
+                    android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_teststatus"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="4dp"
                     android:gravity="center"
+                    android:textStyle="bold"
+                    android:textSize="10sp"
                     android:text="status" />
 
                 <ImageView
                     android:id="@+id/iv_download"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:src="@drawable/ic_file_download_black_36dp" />
 
             </LinearLayout>
@@ -74,19 +76,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_gravity="center"
+                android:layout_margin="4dp"
                 android:background="@android:color/darker_gray" />
 
             <LinearLayout
                 android:id="@+id/row2"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:weightSum="2">
 
                 <LinearLayout
                     android:id="@+id/row_practice"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginEnd="5dp"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
@@ -109,8 +111,8 @@
 
                         <TextView
                             android:id="@+id/tv_testAttempt"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
                             android:layout_gravity="center"
                             android:layout_marginEnd="5sp"
                             android:background="@drawable/number_skipped"
@@ -134,10 +136,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginRight="4dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Max:"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
 
                                 <TextView
                                     android:id="@+id/tv_attempt_max"
@@ -145,7 +147,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -156,10 +158,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginRight="4dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Avg:"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
 
                                 <TextView
                                     android:id="@+id/tv_attempt_avg"
@@ -167,7 +169,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -178,10 +180,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginRight="4dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Min:"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
 
                                 <TextView
                                     android:id="@+id/tv_attempt_min"
@@ -189,7 +191,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
                             </LinearLayout>
 
 
@@ -201,45 +203,46 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
+                        android:layout_margin="4dp"
                         android:orientation="horizontal"
                         android:weightSum="3">
 
                         <LinearLayout
                             android:id="@+id/ll_start"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:orientation="horizontal">
 
                             <ImageView
                                 android:id="@+id/iv_start"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
                                 android:layout_gravity="center"
-                                android:layout_marginEnd="2dp"
+                                android:layout_marginRight="2dp"
                                 android:src="@drawable/play" />
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_marginStart="3dp"
+                                android:layout_marginLeft="3dp"
                                 android:text="Start" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:id="@+id/ll_resume"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:orientation="horizontal">
 
                             <ImageView
                                 android:id="@+id/iv_resume"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
                                 android:layout_gravity="center"
                                 android:src="@drawable/resume" />
 
@@ -247,21 +250,21 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_marginStart="3dp"
+                                android:layout_marginLeft="3dp"
                                 android:text="Resume" />
                         </LinearLayout>
 
                         <LinearLayout
                             android:id="@+id/ll_review"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:orientation="horizontal">
 
                             <ImageView
                                 android:id="@+id/iv_review"
-                                android:layout_width="30dp"
-                                android:layout_height="30dp"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
                                 android:layout_gravity="center"
                                 android:src="@drawable/review" />
 
@@ -269,7 +272,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:layout_marginStart="3dp"
+                                android:layout_marginLeft="3dp"
                                 android:text="Review" />
                         </LinearLayout>
 
@@ -281,17 +284,16 @@
                 <View
                     android:id="@+id/divider"
                     android:layout_width="2dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="15dp"
-                    android:layout_marginTop="15dp" />
+                    android:layout_margin="8dp"
+                    android:background="@android:color/darker_gray" />
 
                 <LinearLayout
                     android:id="@+id/row_flash"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:layout_marginStart="5dp"
                     android:orientation="vertical">
 
                     <LinearLayout
@@ -302,19 +304,19 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="@drawable/btn_details_bg"
-                            android:text="Flash Card"
                             android:layout_margin="2dp"
+                            android:background="@drawable/btn_details_bg"
                             android:gravity="center"
                             android:padding="3dp"
-                            android:textStyle="italic|bold"
+                            android:text="Flash Card"
+                            android:textColor="#FFFFFF"
                             android:textSize="12sp"
-                            android:textColor="#FFFFFF"/>
+                            android:textStyle="italic|bold" />
 
                         <TextView
                             android:id="@+id/tv_flashAttempt"
-                            android:layout_width="25dp"
-                            android:layout_height="25dp"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
                             android:layout_gravity="center"
                             android:layout_marginEnd="5sp"
                             android:background="@drawable/number_skipped"
@@ -338,10 +340,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginRight="4dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Max:"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
 
                                 <TextView
                                     android:id="@+id/tv_flash_max"
@@ -349,7 +351,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -360,10 +362,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginRight="4dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Avg:"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
 
                                 <TextView
                                     android:id="@+id/tv_flash_avg"
@@ -371,7 +373,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
                             </LinearLayout>
 
                             <LinearLayout
@@ -382,10 +384,10 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginEnd="8dp"
+                                    android:layout_marginRight="4dp"
                                     android:gravity="center_horizontal|top"
                                     android:text="Min:"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
 
                                 <TextView
                                     android:id="@+id/tv_flash_min"
@@ -393,7 +395,7 @@
                                     android:layout_height="wrap_content"
                                     android:gravity="center_horizontal|top"
                                     android:textColor="@color/green"
-                                    android:textSize="12sp" />
+                                    android:textSize="10sp" />
                             </LinearLayout>
 
 
@@ -403,27 +405,25 @@
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:layout_margin="4dp"
                         android:gravity="center"
                         android:id="@+id/ll_fstart"
                         android:orientation="horizontal">
 
                         <ImageView
                             android:id="@+id/iv_fstart"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_marginBottom="5dp"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
                             android:layout_gravity="center"
-                            android:layout_marginEnd="2dp"
+                            android:layout_marginRight="2dp"
                             android:src="@drawable/play" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_marginStart="3dp"
                             android:text="Start" />
                     </LinearLayout>
 
