--- a/app/src/main/res/layout/detailedscoreview.xml
+++ b/app/src/main/res/layout/detailedscoreview.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00000000">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <RelativeLayout
-        android:id="@+id/subcatTotal"
+        android:id="@+id/ralative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#00000000"
-        >
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:padding="20dp"
+        android:background="@null">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:background="#00000000">
+            android:orientation="vertical"
+            android:padding="10dp"
+            android:background="@drawable/text">
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,7 +39,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black"
                         android:text="Category"/>
 
@@ -50,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black"
                         android:text=" Subcat "/>
 
@@ -67,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black"
                         android:text="No.of Qs"/>
 
@@ -83,7 +89,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black"
                         android:text="Attempt "/>
 
@@ -99,7 +105,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black"
                         android:text="Skipped "/>
 
@@ -115,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black"
                         android:text="Correct "/>
 
@@ -131,7 +137,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="12sp"
                         android:textColor="@android:color/black"
                         android:text="Percent "/>
                 </TableRow>
@@ -142,15 +148,14 @@
             </TableLayout>
         </LinearLayout>
 
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_close"
-            android:id="@+id/iv_close"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
-
     </RelativeLayout>
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:id="@+id/iv_close"
+        android:contentDescription="close"
+        android:src="@drawable/ic_close" />
 
-</LinearLayout>
+</RelativeLayout>
